fix overflow on panels

--- a/src/css/organisms/panel.css
+++ b/src/css/organisms/panel.css
@@ -79,6 +79,7 @@
 .panel__content {
   flex-grow: 1;
   overflow:auto;
+  overflow-x:hidden;
 }
 
 .panel .tab-label .tab-label__title,
